tests/rosetta/out/Fortran/abundant-deficient-and-perfect-number-classifications.error
gfortran: exit status 1
/tmp/abundant-deficient-and-perfect-number-classifications.f90:33:5:

   33 |     i = 1
      |     1
Error: Symbol ‘i’ at (1) has no IMPLICIT type
/tmp/abundant-deficient-and-perfect-number-classifications.f90:20:15:

   20 |     do while (((p <= i) / 2))
      |               1
Error: Operands of binary numeric operator ‘/’ at (1) are LOGICAL(4)/INTEGER(4)
