tests/rosetta/out/Fortran/abundant-deficient-and-perfect-number-classifications.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program abundant_deficient_and_perfect_number_classifications
  implicit none
    integer :: sum
    integer :: p
    integer :: d
    integer :: a
    integer :: pnum
      integer :: j
    character(len=100) :: s0
    character(len=100) :: s1
    character(len=100) :: s2
  main()
  contains
  recursive integer function pfacSum(i) result(res)
    integer, intent(in) :: i
    sum = 0
    p = 1
    do while (((p <= i) / 2))
      if ((mod(i,p) == 0)) then
        sum = (sum + p)
      end if
      p = (p + 1)
    end do
    res = sum
    return
  end function pfacSum
  recursive integer function main() result(res)
    d = 0
    a = 0
    pnum = 0
    i = 1
    do while ((i <= 20000))
      j = pfacSum(i)
      if ((j < i)) then
        d = (d + 1)
      end if
      if ((j == i)) then
        pnum = (pnum + 1)
      end if
      if ((j > i)) then
        a = (a + 1)
      end if
      i = (i + 1)
    end do
    write(s0,'(G0)') d
    print *, trim('There are ' // s0) // ' deficient numbers between 1 and 20000'
    write(s1,'(G0)') a
    print *, trim('There are ' // s1) // ' abundant numbers  between 1 and 20000'
    write(s2,'(G0)') pnum
    print *, trim('There are ' // s2) // ' perfect numbers between 1 and 20000'
  end function main
end program abundant_deficient_and_perfect_number_classifications
